# wa-trail-guide

./: .gitignore  LICENSE  README.md  pyproject.toml  refresh.sh  run.sh  serve.sh
data/: campgrounds.json  extra_trails.json  oregon_trails.json  rest_areas.json
launchd/: com.lifidea.wta-status-refresh.plist  com.lifidea.wta-status-server.plist  com.lifidea.wta-status.plist
src/: common.py  compute_drive.py  render.py  scrape_reports.py  scrape_trails.py  server.py  summarize.py
templates/: admin.html.j2  dashboard.html.j2
